@@ -821,8 +821,8 @@ convilong (iCode *ic, eBBlock *ebp)
   SPEC_SHORT (leftType) = 0;
   SPEC_SHORT (rightType) = 0;
 
-  left = IC_LEFT (ic);
-  right = IC_RIGHT (ic);
+  left = ic->left;
+  right = ic->right;
 
   // Special case: 16x16->32 multiplication.
   if (op == '*' && (muls16tos32[0] || muls16tos32[1] || port->hasNativeMulFor) &&
@@ -833,12 +833,12 @@ convilong (iCode *ic, eBBlock *ebp)
       iCode *lic = IS_SYMOP (left) ? hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (left))) : 0;
       iCode *ric = IS_SYMOP (right) ? hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (right))) : 0;
 
-      if ((!lic || lic->op == CAST && getSize (operandType (IC_RIGHT (lic))) == 2 && SPEC_USIGN (operandType (IC_RIGHT (lic))) == SPEC_USIGN (operandType (left))) &&
-        (!ric || ric->op == CAST && getSize (operandType (IC_RIGHT (ric))) == 2 && SPEC_USIGN (operandType (IC_RIGHT (ric))) == SPEC_USIGN (operandType (right))))
+      if ((!lic || lic->op == CAST && IS_INTEGRAL (operandType (lic->right)) && getSize (operandType (lic->right)) == 2 && SPEC_USIGN (operandType (lic->right)) == SPEC_USIGN (operandType (left))) &&
+        (!ric || ric->op == CAST && IS_INTEGRAL (operandType (ric->right)) && getSize (operandType (ric->right)) == 2 && SPEC_USIGN (operandType (ric->right)) == SPEC_USIGN (operandType (right))))
         {
           func = muls16tos32[SPEC_USIGN (operandType (left))];
 
-          if (func || port->hasNativeMulFor && lic && ric && port->hasNativeMulFor (ic, operandType (IC_RIGHT (lic)), operandType (IC_RIGHT (ric))))
+          if (func || port->hasNativeMulFor && lic && ric && port->hasNativeMulFor (ic, operandType (lic->right), operandType (ric->right)))
             {
               if (lic)
                 {
@@ -846,7 +846,7 @@ convilong (iCode *ic, eBBlock *ebp)
                   OP_SYMBOL (left)->type = newIntLink ();
                 }
               else
-                IC_LEFT (ic) = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (left), operandLitValue (left)), false);
+                ic->left = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (left), operandLitValue (left)), false);
 
               if (ric)
                 {
@@ -854,7 +854,7 @@ convilong (iCode *ic, eBBlock *ebp)
                   OP_SYMBOL (right)->type = newIntLink ();
                 }
               else
-                IC_RIGHT (ic) = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (right), operandLitValue (right)), false);
+                ic->right = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (right), operandLitValue (right)), false);
 
               if (func) // Use 16x16->32 support function
                 goto found;
@@ -871,12 +871,12 @@ convilong (iCode *ic, eBBlock *ebp)
       iCode *lic = IS_SYMOP (left) ? hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (left))) : 0;
       iCode *ric = IS_SYMOP (right) ? hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (right))) : 0;
 
-      if ((lic && lic->op == CAST && getSize (operandType (IC_RIGHT (lic))) <= 4 && SPEC_USIGN (operandType (IC_RIGHT (lic)))) && // Todo: Allow !lic / !ric for literal operands?
-        (ric && ric->op == CAST && getSize (operandType (IC_RIGHT (ric))) <= 1 && SPEC_USIGN (operandType (IC_RIGHT (ric)))))
+      if ((lic && lic->op == CAST && IS_INTEGRAL (operandType (lic->right)) && getSize (operandType (lic->right)) <= 4 && SPEC_USIGN (operandType (lic->right))) && // Todo: Allow !lic / !ric for literal operands?
+        (ric && ric->op == CAST && IS_INTEGRAL (operandType (ric->right)) && getSize (operandType (ric->right)) <= 1 && SPEC_USIGN (operandType (ric->right))))
         {
           func = mulu32u8tou64;
 
-          if (func || port->hasNativeMulFor && lic && ric && port->hasNativeMulFor (ic, operandType (IC_RIGHT (lic)), operandType (IC_RIGHT (ric))))
+          if (func || port->hasNativeMulFor && lic && ric && port->hasNativeMulFor (ic, operandType (lic->right), operandType (ric->right)))
             {
               if (lic)
                 {
@@ -886,7 +886,7 @@ convilong (iCode *ic, eBBlock *ebp)
                   SPEC_USIGN (OP_SYMBOL (left)->type) = 1;
                 }
               else
-                IC_LEFT (ic) = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (left), operandLitValue (left)), false);
+                ic->left = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (left), operandLitValue (left)), false);
 
               if (ric)
                 {
@@ -895,7 +895,7 @@ convilong (iCode *ic, eBBlock *ebp)
                   SPEC_USIGN (OP_SYMBOL (left)->type) = 1;
                 }
               else
-                IC_RIGHT (ic) = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (right), operandLitValue (right)), false);
+                ic->right = operandFromValue (valCastLiteral (newIntLink(), operandLitValue (right), operandLitValue (right)), false);
 
               if (func) // Use 32x8->64 support function
                 goto found;
